# ros2_rmw_benchmark

./: .gitignore  CONFIGS.md  CONTRIBUTING.md  LICENSE  README.md  RESULTS.md
bench_nodes/: CMakeLists.txt  package.xml
bench_nodes/msg/: FixedMsg.msg
bench_nodes/src/: load_node.cpp
configs/: cyclonedds_shm.xml  cyclonedds_tuned.xml  fastdds_shm.xml  fastdds_tuned.xml  iox_roudi_config.toml
docker/: Dockerfile  Dockerfile.dockerignore  entrypoint.sh
results/: system.md
results/jazzy/: result_cyclonedds_default_n1.json  result_cyclonedds_default_n10.json  result_cyclonedds_default_n100.json  result_cyclonedds_default_n200.json  result_cyclonedds_default_n50.json  result_cyclonedds_tuned_n1.json  result_cyclonedds_tuned_n10.json  result_cyclonedds_tuned_n100.json  result_cyclonedds_tuned_n200.json  result_cyclonedds_tuned_n50.json  result_fastdds_default_n1.json  result_fastdds_default_n10.json  result_fastdds_default_n100.json  result_fastdds_default_n200.json  result_fastdds_default_n50.json  result_fastdds_tuned_n1.json  result_fastdds_tuned_n10.json  result_fastdds_tuned_n100.json  result_fastdds_tuned_n200.json  result_fastdds_tuned_n50.json  result_unix_socket_n1.json  result_unix_socket_n10.json  result_unix_socket_n100.json  result_unix_socket_n200.json  result_unix_socket_n50.json  result_zenoh_default_n1.json  result_zenoh_default_n10.json  result_zenoh_default_n100.json  result_zenoh_default_n200.json  result_zenoh_default_n50.json  (+7 more)
scripts/: aggregate.py  clean.sh  measure.py  plot.py  rmw_matrix.py  run_benchmark.sh  run_one.py  sysinfo.sh
(+37 files in other folders)
